2019-03-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/aclocal.m4,
	* sim/ucsim/configure.ac,
	* sim/ucsim/configure: reverting previous changes; go back to
	  using default C++ dialect instead of C++11

2019-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c,
	  support/regression/tests/gcc-torture-execute-pr70005.c:
	  Better register allocation for assignment, RFE #615, fix some bugs in code generation.

2019-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c:
	  Better register allocation for surviving ifx operands, RFE #610.

2019-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-divcmp-2.c:
	  Enable passing test for pdk14.
	* src/z80/gen.c,
	  support/regression/tests/z88dk.c,
	  support/regression/tests/bug-2881.c:
	  Fix bug #2881.

2019-03-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/aclocal.m4,
	* sim/ucsim/configure.ac,
	* sim/ucsim/configure: request c++11 dialect

2019-03-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Cheaper adjustment of pointer in p.
	* device/include/limits.h,
	  support/regression/tests/bug-2885.c:
	  Fix bug #2885.

2019-03-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix calculation of cycle cost.
	* support/regression/tests/gcc-torture-execute-va-arg-19.c,
	  support/regression/tests/gcc-torture-execute-960302-1.c,
	  support/regression/tests/getbyte.c,
	  support/regression/tests/literalop.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).
	* support/regression/tests/gcc-torture-execute-20041011-1.c:
	  Redisable test for ds390 that got enabled accientially.
	* support/regression/tests/gcc-torture-execute-pr34456.c:
	  Disable a test for ds390, where it fails (bug #2883).
	* sim/ucsim/pdk.src/glob.cc:
	  Fix ret k debug output, patch by Nicolas Lesser.
	* src/SDCCglue.c: