@@ -42,13 +42,13 @@ testTortureExecute (void)
 
   if (ROR (c, SHIFT1) != ROR (CHAR_VALUE, SHIFT1))
     ASSERT (0);
-#ifndef __SDCC_pdk14 // Lack of memory - see RFE #611.
+
   if (ROR (s, shift1) != ROR (SHORT_VALUE, SHIFT1))
     ASSERT (0);
 
   if (ROR (s, SHIFT1) != ROR (SHORT_VALUE, SHIFT1))
     ASSERT (0);
-
+#ifndef __SDCC_pdk14 // Lack of memory - see RFE #611.
   if (ROR (i, shift1) != ROR (INT_VALUE, SHIFT1))
     ASSERT (0);
 
