@@ -1,3 +1,11 @@
+2019-03-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/ralloc2.cc,
+	  src/pdk/gen.c,
+	  support/regression/tests/gcc-torture-execute-20020508-2.c,
+	  support/regression/tests/gcc-torture-execute-pr41750.c:
+	  Improve register allocation, RFE #611, RFE #612.
+
 2019-03-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* sim/ucsim/aclocal.m4,
